--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,6 @@ cython_debug/
 #.idea/
 .pdm-python
 
-./**/.idea/
-!./**/.idea/*.iml
-!./**/.idea/modules.xml
+/**/.idea/*
+!/**/.idea/*.iml
+!/**/.idea/modules.xml
