--- a/packages/a/pyproject.toml
+++ b/packages/a/pyproject.toml
@@ -15,3 +15,7 @@ license = {text = "MIT"}
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm.build]
+package-dir = "src"
+includes = ["src"]
